--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
         <div class="chat-header">
             <h2>ChatBox Application</h2>
         </div>
-        <div class="connecting">Connect to webchat....</div>
+        <div class="connecting">Connect to chat room....</div>
         <ul id="messageArea">
 
         </ul>
