--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
   <title>ChatBox Application | Spring Boot + WebSocket</title>
   <link rel="stylesheet" href="/css/main.css"/>
 </head>
-<body background="maxresdefault.jpg"
+<body background="image/maxresdefault.jpg"
       style="background-position: center; background-repeat: no-repeat; background-size: cover;">
 <noscript>
   <h2>Oops! It seems that this browser does not support JavaScript</h2>
